# sidevis

./: README.md  app.py  numpy-samples.pkl  pyproject.toml  requirements.txt
sidevis/: __main__.py  camera.py  fileadapter.py  qtgui.py  version.py
